--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <!-- Python -->
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
-            <i class="ri-python-line" style="color: #ffbb2c;"></i>
+            <i class="ri-code-line" style="color: #ffbb2c;"></i>
             <h3>Python</h3>
           </div>
         </div>
@@ -154,7 +154,7 @@
         <!-- R -->
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="ri-ruler-line" style="color: #e74c3c;"></i>
+            <i class="ri-terminal-window-line" style="color: #e74c3c;"></i>
             <h3>R</h3>
           </div>
         </div>
@@ -170,7 +170,7 @@
         <!-- Process Analysis -->
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="ri-line-chart-line" style="color: #2ecc71;"></i>
+            <i class="ri-bar-chart-2-line" style="color: #2ecc71;"></i>
             <h3>Process Analysis</h3>
           </div>
         </div>
@@ -183,7 +183,7 @@
           </div>
         </div>
       </div>
-    </div>
+    
     
 
     </div><!-- End Interests -->
