--- a/projects/assemblyline.html
+++ b/projects/assemblyline.html
@@ -43,14 +43,11 @@
   
             <div class="col-lg-12 portfolio-info">
               <br>
-              <h2 style="color:#12d640"> Twitter Emotion Analyses</h2>
-              <ul>
-                <li><strong>Tech Stack</strong>: Python, HTML, CSS, Bootstrap, GCP(Pub/Sub, Dataflow, Data Studio, GAE, BigQuery)</li>
-                <li><strong>Github URL</strong>: <a href="https://github.com/ergulenes/Twitter_Emotion_Analyses" target="_blank">Project Link</a></li>
-              </ul>
+              <h2 style="color:#12d640"> Capacity Utilization Optimization of Automated Assembly Lines</h2>
+             
   
                 <p>
-                 Twitter Emotion Analyses from 1.6 M tweets with deep learning model 
+                  Identifying capacity bottlenecks in the automatic assembly lines for TV electronic card production at Beko Electronic Plant. The goal is to create a production schedule that maximizes capacity, thereby reducing equipment and staff idle times. This optimization is intended to increase overall capacity, while simultaneously decreasing workforce, capital utilization, and costs. 
                 </p>
                
             </div>
