--- a/projects/ml.html
+++ b/projects/ml.html
@@ -43,15 +43,12 @@
 
           <div class="col-lg-12 portfolio-info">
             <br>
-            <h2 style="color:#12d640">ML-DL web app</h2>
+            <h2 style="color:#12d640">Machine Failure Forecasting in Manufacturing Firms</h2>
 
-            <ul>
-              <li><strong>Tech Stack</strong>: Flask, Python, Heroku, SQlite, HTML, CSS</li>
-              <li><strong>DEMO URL</strong>: <a href="https://www.youtube.com/watch?v=ZuNE5APhpMk" target="_blank">Project Link</a></li>
-            </ul>
+            
 
             <p>
-              Merged 48MB images captured by a drone using the WebODM library and photogrammetry techniques, for location-based object classification with a trained deep learning model.
+              Using historical data, data graphs on the subject were estimated. Possible deviations and problems were predicted based on historical data using predictive maintenance.
             </p>
           </div>
 
