--- a/projects/student.html
+++ b/projects/student.html
@@ -43,14 +43,10 @@
   
             <div class="col-lg-12 portfolio-info">
               <br>
-              <h2 style="color:#12d640">Image Generator</h2>
-              <ul>
-                <li><strong>Tech Stack</strong>: TJava, NodeJS, Python, HTML, CSS, Javascript, AWS(S3, EC2, SQS)</li>
-                <li><strong>Github URL</strong>: <a href="https://github.com/ergulenes/Anadolu-Isuzu-Ai-Project" target="_blank">Project Link</a></li>
-              </ul>
-  
+              <h2 style="color:#12d640">An Algorithm Development for Students Scheduling</h2>
+              
               <p>
-                During my internship at Anadolu Isuzu, I played a significant role in integrating artificial intelligence into logistic processes. In this context, I developed a mobile application that involves part identification and dispatching to the appropriate location. I had the opportunity to be a part of the transformation in the logistics department by facilitating its integration with artificial intelligence.
+                A code was written in Python that could handle the situations of taking too much responsibility faced by students and rank them all according to certain priority options by using “Scheduling Algorithms”. Teamwork, compatibility, and "seeing the big picture" were gained during this project to combine the codes written by people with different ideas in the final.
               </p>
 
             </div>
